--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -102,3 +102,65 @@
   margin-bottom:0px;
   
   }
+
+/* Footer */
+footer img{
+
+  height: 10vw;
+  width: 20vw;
+}
+
+footer{
+  margin-top: 200px;
+  border-bottom: #D98494 10px solid;
+  -webkit-box-shadow: 0px 0px 8px 2px #BBBAB8; 
+  background-color: #ffff;
+  padding: 20px;
+}
+
+.navegacao-footer{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+ 
+}
+
+.navegacao-footer ul{
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  align-items: center;
+  margin: 65px 0;
+}
+
+.navegacao-footer ul li{
+  margin-right: 30px;
+}
+
+.navegacao-footer ul li a{
+  text-decoration: none;
+  color: #000000;
+  transition: 0.5s;
+}
+
+.navegacao-footer ul li a:hover{
+  color: #D98494;
+  font-weight: bold;
+}
+
+.navegacao-footer p{
+  color:  #BBBAB8;;
+}
+
+.redes-footer img:nth-child(1){
+  margin-right: 20px; 
+} 
+
+.redes-footer img{
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+} 
+
+/* cards */
