--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -16,6 +16,25 @@
        
      }
 
+    .botao-padrao{
+      padding: 10px 20px;
+      text-decoration: none;
+      color: #ffff;
+      font-weight: bold;
+      background:  #D98494;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      transition: 0.5s;
+    }
+    
+    .botao-padrao:hover{
+      background: #84D9D9;
+      box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+    }
+  
+    
+
+
 #logo{
     height: 10vw;
     width: 20vw;
@@ -103,6 +122,23 @@
   
   }
 
+  .bunner2{
+    width: 100%;
+    background-size: cover;
+    margin-bottom:10vw;
+
+    
+    }
+
+    .bunner3{
+      width: 100%;
+      background-size: cover;
+      margin-top: 10vw;
+      margin-bottom:10vw;
+  
+      
+      }
+  
 /* Footer */
 footer img{
 
@@ -164,3 +200,78 @@ footer{
 } 
 
 /* cards */
+
+.caixa{
+  width: 60%;
+  height: 150px;
+  border: #D98494 4px solid;
+  border-radius: 10px;
+  background-color: #ffff;
+  margin-bottom: 4vw; 
+
+  
+}
+
+.firts{
+  margin-left: 10vw;
+}
+.second{
+  margin-left: 20vw;
+}
+
+
+.third{
+  margin-left: 30vw;
+}
+
+/* .itens-card{
+  display: inline-block;
+  
+} */
+
+.itens-card{
+  display: inline-block;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 30px;
+
+}
+
+.itens-card img{
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  margin: 10px 10px;
+
+  
+}
+
+.itens-card p{
+  margin-inline-start: 80px;
+}
+
+.texto-cards{
+  margin-left: 10vw;
+  width: 55vw;
+  margin-bottom: 10vh;
+  
+}
+
+.texto-cards h1{
+  
+  color: #D98494;
+  margin-bottom: 5vh;
+  
+}
+
+.btn-cards{
+  margin-left: 130vh;
+}
+
+/* cards blog */
+.cards-blog{
+  border: 3px solid #D98494;
+  border-radius: 5px;
+  margin-right: 2vw;
+}
+
