--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -1,143 +1,142 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,400;1,500;1,900&display=swap');
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family:'Roboto', sans-serif;
-    scroll-behavior: smooth;
-   }
-   
-   .container{
-       margin: 0 auto;
-       width: 90%;
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-       
-     }
 
-    .botao-padrao{
-      padding: 10px 20px;
-      text-decoration: none;
-      color: #ffff;
-      font-weight: bold;
-      background:  #D98494;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 5px;
-      transition: 0.5s;
-    }
-    
-    .botao-padrao:hover{
-      background: #84D9D9;
-      box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
-    }
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+  /* bunner 1 */
+
   
-    
+.container-bunner {
+  background-image: url(../assets/bunner1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 15px;
+  width: 100%;
+  height: 100vh;
 
-
-#logo{
-    height: 10vw;
-    width: 20vw;
 }
 
-     /* Header */
-  .header{
-    background-color: #ffff;
-    /* -webkit-box-shadow: 0px 0px 8px 2px #BBBAB8; */
-    border-bottom: #D98494 2px solid;
-  }
-  
- .navegacao{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-  }
-  
-  .navegacao ul{
-    display: flex;
-    align-items: center;
-  }
-  
-  .navegacao ul li{
-    list-style: none;
-    margin-right: 30px;
-    text-decoration: none;
-  }
-  
-  .navegacao ul li a{
-    text-decoration: none;
-    margin-right: 0px;
-    font-weight: bold;
-    color: #D98494;
-    transition: 0.5s;
-  }
-  
-  .navegacao ul li a:hover{
-    color: #000;
-  }
-  
-  .navegacao a{
-    display: block;
-    margin-right: 30px;
-  }
-  
-  .botao-login{
-    padding: 10px 20px;
-    color:  #D98494;
-    font-weight: bold;
-    text-decoration: none;
-    transition: 0.5s;
-  }
-  
-  .botao-login:hover{
-    background:  #D98494;
-    border-radius: 5px;
-    color: #ffff;
-    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
-  }
-  
-  .botao-cadastro{
-    padding: 10px 20px;
-    text-decoration: none;
-    color: #ffff;
-    font-weight: bold;
-    background:  #D98494;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    transition: 0.5s;
-  }
-  
-  .botao-cadastro:hover{
-    background: #84D9D9;
-    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+  .texto-b{
+    margin-top: 80px;
+    margin-right: 50px;
+    margin-left: 65px;
   }
 
-  /* imagem  */
+  .texto-b p{
+    width: 500px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 50px;
+   
 
-  .bunner1{
-  width: 100%;
+  }
+
+  .titulo h1{
+   color: #D98494;
+   font-family: 'Pacifico', cursive;
+   font-size: 60px;
+   text-shadow: 4px 4px black;
+  }
+
+  .titulo h1{
+    display: flex;
+    margin-bottom: 20px;
+  }
+
+  .texto-b img{
+    padding-bottom: 20px;
+    margin-left: 10px;
+  }
+
+
+
+
+/* bunner2 */
+
+.container-bunner-second-image{
+  background-image: url(../assets/bunner2.jpg);
+  margin-bottom: 20vh;
+  background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom:0px;
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+
   
-  }
+}
 
-  .bunner2{
-    width: 100%;
-    background-size: cover;
-    margin-bottom:10vw;
+.card-nossa-historia{
+  background-color: #ffff;
+  border-radius: 20px;
+  height: 70vh;
+  width: 50vw;
+  margin-left: 90vh;
+  margin-top: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
-    
-    }
+}
 
-    .bunner3{
-      width: 100%;
-      background-size: cover;
-      margin-top: 10vw;
-      margin-bottom:10vw;
+
+.texto-bunner-second h1{
+
+  color: #D98494;
+  font-size: 10vh;
+  text-shadow: 4px 4px black;
+  margin-bottom: 5vh;
+}
+
+.texto-bunner-second p{
+  width: 400px;
+  color: black;
+  margin-bottom: 10vh;
+  font-weight: 700;
+ 
+}
+
+.container-bunner-third{
+  background-image: url(../assets/white-cat-lies-on-woman-s-knees.jpg);
+  width: 100%;
+  height: 100vh ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 15vh;
+  margin-bottom: 10vh;
+}
+
+
+/* cards blog  */
+.cards-blog{
+  border: 2px solid #D98494;
+  width: 30vw;
+  height: 80vh;
+  border-radius: 5px;
+  padding: 10px;
+}
+.cards-blog img{
+  border-radius: 10px;
+  width: 100%;
+  height: 40vh;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.cards-blog img:hover{
+  padding: 30px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  cursor: pointer;
+}
+.cards-blog h1{
+  color: #D98494;
+  margin-top: 5vh;
+  margin-bottom: 3vh;
+}
+
+.cards-blog p{
+  margin-bottom: 4vh;
   
-      
-      }
+}
+
   
 /* Footer */
 footer img{
