--- a/site/public/css/nossa-historia.css
+++ b/site/public/css/nossa-historia.css
@@ -12,15 +12,14 @@ body{
 
 }
 
-.section-chico{
+.section-sobre-nos{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     padding: 5vh;
     background-color: #ffff;
     margin-top: 10vh;
     
 }
-
-.section-chico img{
+.section-sobre-nos img{
     position: absolute;
     margin-left: 5vh;
     width: 330px;
@@ -29,21 +28,46 @@ body{
     border: 10px white solid;
 }
 
-.section-chico img:hover{
+.section-sobre-nos img:hover{
     width: 400px;
     height: 400px;
     cursor: pointer;
 }
-.section-chico h1{
+.section-sobre-nos h1{
 color: #D98494;
 margin:5vh;
 margin-left: 30vw;
 border-bottom: #D98494 3px solid;
 }
 
-.section-chico p{
+.section-sobre-nos p{
 width: 50vw;
 margin:5vh;
 margin-left: 30vw;
+text-align: justify;
+
 }
 
+.chico{
+    margin-bottom: 20vh;
+}
+
+.sobre-mim{
+    margin-bottom: 45vh;
+
+}
+
+.sobre-mim a{
+    text-decoration: none;
+    color: #D98494;
+}
+
+.container-galeria{
+    display: flex;
+   
+}
+
+.container-galeria img{
+    width: 340px;
+    height: 340px;
+}
