--- a/site/public/css/cadastro.css
+++ b/site/public/css/cadastro.css
@@ -2,7 +2,7 @@
 
   body{
     background: rgb(217,132,148);
-    background: linear-gradient(90deg, rgba(217,132,148,1) 0%, rgba(217,132,148,1) 32%, rgba(132,217,217,1) 97%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(211, 144, 156) 0%, rgba(217,132,148,1) 32%, rgba(132,217,217,1) 97%, rgba(0,212,255,1) 100%);
   }
 
   .container-forms{
