--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
   /* bunner 1 */
 
@@ -35,7 +34,7 @@
   .titulo h1{
    color: #D98494;
    font-family: 'Pacifico', cursive;
-   font-size: 60px;
+   font-size: 5.5rem;
    text-shadow: 4px 4px black;
   }
 
@@ -62,6 +61,7 @@
   width: 100%;
   height: 100vh;
   padding: 20px;
+ text-align: justify;
 
   
 }
@@ -87,7 +87,7 @@
 .texto-bunner-second h1{
 
   color: #D98494;
-  font-size: 10vh;
+  font-size: 5.5rem;
   text-shadow: 4px 4px black;
   margin-bottom: 5vh;
 }
@@ -119,7 +119,7 @@ margin-top: 20vh;
 margin-bottom: 10vh;
 }
 
-/* cards  */
+/* cards iniciais  */
 
 .titulo-nosso-blog{
 display: flex;
@@ -147,7 +147,7 @@ border-bottom: #84D9D9 3px solid;
 .cards-blog{
   border: 2px solid #D98494;
   width: 25vw;
-  height: 90vh;
+  height: 80vh;
   border-radius: 5px;
   padding: 10px;
   display: flex;
@@ -227,12 +227,14 @@ border-bottom: #84D9D9 3px solid;
   height: 60px;
   width: 60px;
   margin: 10px 10px;
+  
 
   
 }
 
 .itens-card p{
   margin-inline-start: 80px;
+  text-align: justify;
 }
 
 .texto-cards{
@@ -253,7 +255,164 @@ border-bottom: #84D9D9 3px solid;
   margin-left: 130vh;
 }
 
+/* gráfico analytics */
 
+.analytics{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15vh;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 20px;
 
+}
+
+.analytics .texto-a h1{
+color: #D98494;
+font-weight: bold;
+margin-top: 5vh;
+margin-bottom: 5vh;
+
+}
+
+.analytics .texto-a p{
+  width: 550px;
+  text-align: justify;
+}
+
+.analytics .texto-a b{
+color: #D98494;
+font-weight: bold;
+margin-bottom: 5vh;
+}
+
+#myChart{
+  height: 60vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  
+}
+
+/* #quiz */
+
+main {
+  width: 100%;
+  height: 100%;
+  padding: 1rem; /* espacamento interno */
+}
+
+section {
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
+  margin-bottom: 0.625rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 1.75rem;
+  margin: 0.625rem;
+}
+
+.centro {
+  text-align: center;
+}
+
+.questao {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#numQuestao {
+  display: block;
+  background: #00b0ff;
+  padding: 4px 10px 2px 10px;
+  border-radius: 50%;
+}
+
+#pergunta {
+  margin-left: 1rem;
+}
+
+/* article que acomoda a questao completa */
+.questoes {
+  padding: 1.5rem;
+  border: 1px solid #ececec;
+  border-radius: 5px;
+  margin-bottom: 2rem;
+}
+
+.questoes ol li {
+  display: block;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 8px;
+}
+
+.questoes ol li:hover {
+  background: #00b0ff;
+  cursor: pointer;
+}
+
+.bloqueado {
+  display: none;
+}
+
+.bloqueado li:hover {
+  display: none;
+}
+
+#instrucoes {
+  background: #ccc;
+  color: #191919;
+  padding: 0.625rem;
+  border-radius: 8px;
+
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+  animation: piscar .75s infinite alternate;
+}
+
+#aviso {
+  color: #00b0ff;
+}
+
+/* ANIMACAO */
+
+/* Animar o input */
+@keyframes piscar {
+  0% {
+      filter: drop-shadow(0 0 15px #00b0ff);
+      -webkit-filter: drop-shadow(0 0 15px #00b0ff);
+      -moz-filter: drop-shadow(0 0 15px #00b0ff);
+      -o-filter: drop-shadow(0 0 15px #00b0ff);
+      -ms-filter: drop-shadow(0 0 15px #00b0ff);
+  }
+  100% {
+  }
+}
+
+.animar {
+  animation: piscar .75s infinite alternate;
+}
+
+.aparecer {
+  animation: aparecer .5s infinite alternate;
+}
+
+@keyframes aparecer {
+  0% {
+      opacity: 0
+  }
+  100% {
+      opacity: 1
+  }
+}
 
   
