--- a/site/public/css/nossa-historia.css
+++ b/site/public/css/nossa-historia.css
@@ -26,12 +26,11 @@ body{
     height: 330px; 
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     border: 10px white solid;
+    transition: transform .5s linear;
 }
 
 .section-sobre-nos img:hover{
-    width: 400px;
-    height: 400px;
-    cursor: pointer;
+    transform: scale(1.3);
 }
 .section-sobre-nos h1{
 color: #D98494;
@@ -68,6 +67,52 @@ text-align: justify;
 }
 
 .container-galeria img{
+    width: 240px;
+    height: 240px;
+}
+
+/* galeria */
+
+.gallery-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 2vw;
+    padding: 0 2vw;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+}
+
+.header-galery{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10vh;
+   
+}
+
+.header-galery h1{
+    font-family: 'Pacifico', cursive;
+    font-size: 5rem;
+    color: #FFF;
+    text-shadow: 4px 4px black;
+}
+.gallery-items{
     width: 340px;
     height: 340px;
+    border: 10px solid #FFF;
+    box-shadow: 5px 5px 5px #0006;
+    flex-grow: 1;
+    transition: transform .5s linear;
 }
+.gallery-items img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery-items:hover{
+    transform: scale(1.3);
+}
+
+
