--- a/site/public/css/cadastro.css
+++ b/site/public/css/cadastro.css
@@ -107,11 +107,11 @@
   
   .card_erro {
     display: none;
-    background-color: #fff;
+    background-color: red;
     color: black;
     width: 230px;
     position: fixed;
-    border-radius: 4px;
+    border-radius: 10px;
     border: #e6005a 3px solid;
     padding: 10px;
     margin-right: 10%;
