--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -295,124 +295,67 @@ margin-bottom: 5vh;
 
 /* #quiz */
 
-main {
-  width: 100%;
-  height: 100%;
-  padding: 1rem; /* espacamento interno */
+
+#title {
+    text-decoration: underline;
 }
 
-section {
-  width: 100%;
-  margin: 0 auto;
-  padding: 1rem;
-  margin-bottom: 0.625rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+#quiz {
+    text-indent: 10px;
+    display:none;
 }
 
-h1 {
-  text-align: center;
-  font-size: 1.75rem;
-  margin: 0.625rem;
+.button {
+    border:4px solid;
+    border-radius:5px;
+    width: 40px;
+    padding-left:5px;
+    padding-right: 5px;
+    position: relative;
+    float:right;
+    background-color: #DCDCDC;
+    color: black;
+    margin: 0 2px 0 2px;
 }
 
-.centro {
-  text-align: center;
+.button.active {
+    background-color: #F8F8FF;
+    color: #525252;
 }
 
-.questao {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+button {
+    position: relative;
+    float:right;
 }
 
-#numQuestao {
-  display: block;
-  background: #00b0ff;
-  padding: 4px 10px 2px 10px;
-  border-radius: 50%;
+.button a {
+    text-decoration: none;
+    color: black;
 }
 
-#pergunta {
-  margin-left: 1rem;
+#container {
+    width:50%;
+    margin:auto;
+    padding: 0 25px 40px 10px;
+    background-color: #1E90FF;
+    border:4px solid #B0E0E6;
+    border-radius:5px;
+    color: #FFFFFF;
+    font-weight: bold;
+    box-shadow: 5px 5px 5px #888;
 }
 
-/* article que acomoda a questao completa */
-.questoes {
-  padding: 1.5rem;
-  border: 1px solid #ececec;
-  border-radius: 5px;
-  margin-bottom: 2rem;
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
-.questoes ol li {
-  display: block;
-  margin: 1rem;
-  padding: 1rem;
-  border-radius: 8px;
+#prev {
+    display:none;
 }
 
-.questoes ol li:hover {
-  background: #00b0ff;
-  cursor: pointer;
+#start {
+    display:none;
+    width: 90px;
 }
-
-.bloqueado {
-  display: none;
-}
-
-.bloqueado li:hover {
-  display: none;
-}
-
-#instrucoes {
-  background: #ccc;
-  color: #191919;
-  padding: 0.625rem;
-  border-radius: 8px;
-
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1rem;
-  animation: piscar .75s infinite alternate;
-}
-
-#aviso {
-  color: #00b0ff;
-}
-
-/* ANIMACAO */
-
-/* Animar o input */
-@keyframes piscar {
-  0% {
-      filter: drop-shadow(0 0 15px #00b0ff);
-      -webkit-filter: drop-shadow(0 0 15px #00b0ff);
-      -moz-filter: drop-shadow(0 0 15px #00b0ff);
-      -o-filter: drop-shadow(0 0 15px #00b0ff);
-      -ms-filter: drop-shadow(0 0 15px #00b0ff);
-  }
-  100% {
-  }
-}
-
-.animar {
-  animation: piscar .75s infinite alternate;
-}
-
-.aparecer {
-  animation: aparecer .5s infinite alternate;
-}
-
-@keyframes aparecer {
-  0% {
-      opacity: 0
-  }
-  100% {
-      opacity: 1
-  }
-}
-
-  
