--- a/site/public/css/cadastro.css
+++ b/site/public/css/cadastro.css
@@ -211,16 +211,18 @@ footer img{
     cursor: pointer;
   } 
 
-  /* 
+ /* 
   LOADIND DIV */
 
   .loading-div {
     width: 50px;
     margin: auto;
     display: none;
+   
   }
   
   .loading-div img {
+    margin-top: 5vh;
     height: 50px;
     width: 50px;
   }
@@ -235,12 +237,13 @@ footer img{
 
 .card_erro {
   display: none;
-  background-color: #fff;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   color: black;
+  text-align:left;
   width: 230px;
   position: fixed;
-  border-radius: 4px;
-  border: #e6005a 3px solid;
+  border-radius: 10px;
   padding: 10px;
   margin-right: 10%;
 }
