--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -5,11 +5,12 @@
   }
 
   .container-forms{
-      display: flex;
-      justify-content: center;
+    display: flex;
+    justify-content: center;
   }
-
+  
   .formulario{
+  
     background-color: #ffffff;
     padding: 30px 90px 0px 80px; 
     height: 80vh;
@@ -166,6 +167,7 @@ footer img{
   }
   
   .loading-div img {
+    margin-top: 5vh;
     height: 50px;
     width: 50px;
   }
@@ -180,12 +182,13 @@ footer img{
 
 .card_erro {
   display: none;
-  background-color: #fff;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   color: black;
+  text-align:left;
   width: 230px;
   position: fixed;
-  border-radius: 4px;
-  border: #e6005a 3px solid;
+  border-radius: 10px;
   padding: 10px;
   margin-right: 10%;
 }
