--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -197,3 +197,9 @@ footer img{
   font-weight: 500;
   font-size: 20px;
 }
+
+.resultado{
+  height: 10px;
+  width: 100%;
+  background-color: #000000;
+}
