--- a/site/public/logon/logon.css
+++ b/site/public/logon/logon.css
@@ -14,11 +14,11 @@ header{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.container-main{
-    display: flex;
-    justify-content: center;
-    background-color:#ffff;
-    height: 100vh;
+/* .container-main{
+display: flex;
+justify-content: center;
+background-color:#ffff;
+height: 100vh;
 
 margin-left: 5em;
 margin-right: 5em;
@@ -27,7 +27,7 @@ height: 90%;
 border-radius: 0.5em;
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
-}
+/* } */
 
 .formulario{
   
@@ -49,7 +49,7 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 h1{
     margin-top: 5vh;
     margin-bottom: 5vh;
-}
+} */
 
   .formulario input{
     padding: 15px;
@@ -131,7 +131,7 @@ h1{
     justify-content: flex-start;
     margin-bottom: 2vh;
   }
-  .resultado{
+  /* .resultado{
     height: 10px;
     background-color: #ffffff;
     margin-top: 15vh;
@@ -139,4 +139,6 @@ h1{
     margin-left: 5em;
     margin-right: 5em;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
+} */
+
+
