--- a/site/public/logon/logon.css
+++ b/site/public/logon/logon.css
@@ -1,6 +1,7 @@
 body{
 background: rgb(217,132,148);
 background: linear-gradient(90deg, rgba(217,132,148,1) 35%, rgba(0,198,255,1) 100%, rgba(217,132,148,1) 100%);
+font-family: roboto;
 }
 
 header{
@@ -13,11 +14,10 @@ header{
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
-/* .container-main{
+ .container-main{
 display: flex;
 justify-content: center;
-background-color:#ffff;
+background-color:red;
 height: 100vh;
 
 margin-left: 5em;
@@ -26,14 +26,15 @@ margin-top: 4em;
 height: 90%;
 border-radius: 0.5em;
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ }
 
 /* } */
 
-.formulario{
+/* .formulario{
   
     background-color: #ffffff;
-    padding: 5em;
     height: 100vh;
+    padding: 30px 90px 0px 80px;
    
     display: flex;
     flex-direction: column;
@@ -41,17 +42,29 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     justify-content: center;
     margin-top: 20vh;
     margin-bottom: 20vh;
-    border-top: 5px solid #D98494;
   
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  }
+  } */
 
+  form{
+    background-color: #ffffff;
+    padding: 30px 90px 0px 80px;
+    height: 100vh;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
 h1{
     margin-top: 5vh;
     margin-bottom: 5vh;
-} */
+} 
 
-  .formulario input{
+ input{
     padding: 15px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -63,7 +76,7 @@ h1{
 	font-size: 13px;
   }
 
-  .formulario textarea{
+   textarea{
     width: 100%;
     border: 1px solid #ccc;
 	border-radius: 3px;
@@ -80,7 +93,7 @@ h1{
 }
 
 
-  .formulario button{
+   button{
     margin-top: 40px;
     font-weight: bold;
     color: #fff;
@@ -98,27 +111,45 @@ h1{
       width: 18vw;
       height: 35vh;
   } */
+.div-form{
+  
+  background-image: url(../assets/background-quiz.jpeg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 30px 90px 0px 80px;
+  /* padding: 5em;
+  height: 100vh; */
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ margin-top: 20vh;
+  margin-bottom: 20vh;
+  border-top: 5px solid #D98494;
 
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
   .formulario button:hover{
     background: #84D9D9;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 
-  .formulario h1{
+   h1{
       color: #D98494;
       font-weight: bold;
       margin-bottom: 15px;
   }
 
 
-  .formulario label{
+  .campo label{
     color: #D98494;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
   }
 
-  .formulario a{
+   a{
     text-decoration: none;
     color: #848484;
     
