--- a/site/public/logon/logon.css
+++ b/site/public/logon/logon.css
@@ -113,7 +113,7 @@ h1{
   } */
 .div-form{
   
-  background-image: url(../assets/background-quiz.jpeg);
+  background-image: url(../assets/274725.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   padding: 30px 90px 0px 80px;
