--- a/site/public/css/cadastro.css
+++ b/site/public/css/cadastro.css
@@ -59,6 +59,10 @@
     margin-bottom: 5vh;
   }
 /* 
+  .formulario img{
+      width: 15vw;
+      height: 20vh;
+  } */
 
   .formulario button:hover{
     background: #84D9D9;
