--- a/site/public/logon/logon.css
+++ b/site/public/logon/logon.css
@@ -3,93 +3,9 @@ background: rgb(217,132,148);
 background: linear-gradient(90deg, rgba(217,132,148,1) 35%, rgba(0,198,255,1) 100%, rgba(217,132,148,1) 100%);
 font-family: roboto;
 
-/* background-image: url(../assets/body.jpg);
-background-size: cover; */
 }
 
-/* carousel */
 
-
-.container-carousel {
-  position: relative;
-  height: 100vh;
-  margin-top: 5vh;
-  max-width: 100%;
- 
-}
-
-.gallery-wrapper {
-  overflow-x: auto;
-}
-
-.arrow-left,
-.arrow-right {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: auto;
-  bottom: 0;
-  font-size: 20px;
-  line-height: 250px;
-  width: 40px;
-  color: #fff;
-  transition: all 600ms ease-in-out;
-  background: linear-gradient(to left, transparent 0%, black 200%);
-  opacity: 0.1;
-  cursor: pointer;
-  border: none;
-}
-
-.arrow-left:hover,
-.arrow-right:hover {
-  opacity: 1;
-}
-
-.arrow-right {
-  right: 0;
-  left: auto;
-  text-align: right;
-  background: linear-gradient(to right, transparent 0%, black 200%);
-}
-
-.gallery {
-  display: flex;
-  flex-flow: row nowrap;
-  gap: 15px;
-}
-
-.item {
-  width: 100%;
-  height: 100vh;
-  flex-shrink: 0;
-  transition: all 600ms ease-in-out;
-  opacity: 0.5;
-}
-
-.current-item {
-  opacity: 1;
-}
-
-/* fim carousel */
-
-.btn-logout{
-  margin-top: 40px;
-  font-weight: bold;
-  color: #fff;
-  background-color: #D98494;
-  padding: 10px 30px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 20px;
-  transition: 0.5s;
-  margin-bottom: 5vh;
-}
-
-.btn-logout:hover{
-  background: #84D9D9;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
 
 .btn-enviar{
   margin-top: 40px;
@@ -111,23 +27,10 @@ background-size: cover; */
 }
 
 
-header{
-    
-    margin-left: 5em;
-    margin-right: 5em;
-    margin-top: 4em;
-    margin-bottom: 5em;
-    border-radius: 0.5em;
-    height: 20vh;
-    background-color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
 
  .container-main{
 display: flex;
 justify-content: center;
-background-color:red;
 height: 100vh;
 
 margin-left: 5em;
@@ -142,6 +45,7 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     padding: 30px 90px 0px 80px;
+    background-color: #ffff;
     height: 120h;
     border-radius: 20px;
     display: flex;
@@ -223,6 +127,7 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 .div-form{
   
   background-image: url(../assets/03-teste-background.jpg);
+  background-size: cover;
   animation: backgroundAnim 5s ease 0s 1 normal forwards;
   background-repeat: no-repeat;
   background-size: 100%;
