--- a/site/public/quiz/style.css
+++ b/site/public/quiz/style.css
@@ -1,90 +1,158 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,400;1,500;1,900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.25rem;
+}
+
+
 body {
-    font-family:'Roboto', sans-serif;
-    background-image: url(../assets/background-quiz.jpeg);
-    background-size: 100%;
-    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    color: #000;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    padding: 1rem; /* espacamento interno */
+}
+
+section {
+    width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    margin-bottom: 0.625rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
     text-align: center;
-    color: #D98494;
-    text-shadow: 4px 4px black;
-    font-family: 'Pacifico', cursive;
-    font-size: 3rem;
+    font-size: 1.75rem;
+    margin: 0.625rem;
 }
 
-#title {
-    text-decoration: none;
+.centro {
+    text-align: center;
 }
 
-#quiz {
-    text-indent: 10px;
-    display:none;
+.questao {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.button {
-
-
-    width: 65px;
-    padding-left:15px;
-    padding-right: 15px;
-    position: relative;
-    float:right;
+#numQuestao {
+    display: block;
     background: #D98494;
-    color: white;
-    margin: 0 2px 0 2px;
+    padding: 4px 10px 2px 10px;
+    border-radius: 50%;
+}
+
+#pergunta {
+    margin-left: 1rem;
+}
+
+/* article que acomoda a questao completa */
+.questoes {
+    padding: 1.5rem;
+    border: 5px solid #D98494;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+}
+
+.questoes ol li {
+    display: block;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.questoes ol li:hover {
+    background: #00b0ff;
+    cursor: pointer;
+}
+
+.bloqueado {
+    display: none;
+}
+
+.bloqueado li:hover {
+    display: none;
+}
+
+#instrucoes {
+    background: #fff;
+    color: #191919;
+    padding: 0.625rem;
+    border-radius: 8px;
+
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+    animation: piscar .75s infinite alternate;
+}
+
+#aviso {
+    color: #00b0ff;
+    font-weight: bold;
+}
+
+a{
+    padding: 10px 20px;
     text-decoration: none;
     color: #ffff;
     font-weight: bold;
-    text-align: center;
+    background:  #D98494;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     transition: 0.5s;
 }
 
-.button.active {
+a:hover{
     background: #84D9D9;
     box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
 }
 
-button {
-    position: relative;
-    float:right;
+/* ANIMACAO */
+
+/* Animar o input */
+@keyframes piscar {
+    0% {
+        filter: drop-shadow(0 0 15px #D98494);
+        -webkit-filter: drop-shadow(0 0 15px #D98494);
+        -moz-filter: drop-shadow(0 0 15px #D98494);
+        -o-filter: drop-shadow(0 0 15px #D98494);
+        -ms-filter: drop-shadow(0 0 15px #D98494);
+    }
+    100% {
+    }
 }
 
-.button a {
-    text-decoration: none;
-    color: black;
+.animar {
+    animation: piscar .75s infinite alternate;
 }
 
-#container {
-    width:50%;
-    margin:auto;
-    padding: 0 25px 40px 10px;
-    background-color: #ffff;
-    border:4px solid #D98494;
-    border-radius:10px;
-    color: black;
-    font-weight: bold;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
+.aparecer {
+    animation: aparecer .5s infinite alternate;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-#prev {
-    display:none;
-}
-
-#start {
-    display:none;
-    width: 90px;
+@keyframes aparecer {
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
 }
