--- a/site/public/logon/alimente-me.css
+++ b/site/public/logon/alimente-me.css
@@ -5,11 +5,11 @@
     font-family:'Roboto', sans-serif;
   }
 
-  .gatinho-png{
+  /* .gatinho-png{
     position: absolute;
     margin-left: 38em;
     margin-bottom: 30em;
-  }
+  } */
 
   button{
     border-style: none;
@@ -34,7 +34,7 @@
 
   .simuladorAlimentacao h1{
     color: #000;
-    width: 50%;
+    width: 100%;
     margin-bottom: 20px;
     border-bottom: 4px solid #D98494;
   }
@@ -42,7 +42,7 @@
   .simuladorAlimentacao p{
     margin-bottom: 30px;
     text-align: justify;
-    width: 50%;
+    width: 100%;
   }
 
   label{
